@@ -15,8 +15,9 @@ The primary goal of the feature is collection and monitoring of Aurora job SLA (
 Agreements) metrics that defining a contractual relationship between the Aurora/Mesos platform
 and hosted services.
 
-The Aurora SLA feature currently supports stat collection only for service (non-cron)
-production jobs (`"production = True"` in your `.aurora` config).
+The Aurora SLA feature is by default only enabled for service (non-cron)
+production jobs (`"production = True"` in your `.aurora` config). It can be enabled for
+non-production services via the scheduler command line flag `-sla_non_prod_metrics`.
 
 Counters that track SLA measurements are computed periodically within the scheduler.
 The individual instance metrics are refreshed every minute (configurable via
